style.css
body {
    font-family: Helvetica, sans-serif;
    background-color: white;
    height: auto;
}

h1 {
    font-size: 50px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.logo {
    display: flex;
    align-items: flex-end;
    justify-content: flex-start;
    margin-left: 535px;
    text-transform: uppercase;
}

.header img {
    height: 80px;
    margin-bottom: 30px;
}

#profile-icon {
    margin-right: 30px;
    margin-bottom: 40px;
    height: 40px;
}

#p2 {
    transform: scaleX(-1);
}

.nav {
    width: 100%;
    text-align: center;
    margin-top: -15px;
}

.nav .links {
    margin: 0;
    padding: 0;
    list-style-type: none;
    padding-bottom: 30px;
}

.nav li {
    display: inline-block;
    padding: 0 20px;
    color: #222;
    font-size: 18px;
}

.nav li:hover {
    opacity: 0.5;
    transition: opacity ease-in-out 0.2s;
}

.nav a {
    text-decoration: none;
}

.img-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: baseline;
    align-content: space-around;
    row-gap: 45px;
    margin-bottom: 45px;
    margin-top: 45px;
}

.social-img {
    width:250px;
    height: auto;
    margin: 0 auto;
    border-radius: 15px;
    box-shadow: rgba(6, 6, 6, 0.1) 0 0 15px;
    border: .2px solid #f3f3f3;
    position: relative;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(28, 42, 50, 0.72);
    color: #fff;
    visibility: hidden;
    opacity: 0;
    transition: opacity .2s, visibility .2s;
    text-align: center;
  }

  .overlay p {
    padding: 15px 30px;
    text-align: left;
  }
  
  .social-img:hover .overlay{
    visibility: visible;
    opacity: 1;
  }

